<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name ="action_share">Share</string>

    <!-- Menu Label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_poke_glass" translatable="false">Poke Glass</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- label for location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.rahael.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_phone_key" translatable="false">enable_phone_notifications</string>
    <string name="pref_enable_notifications_phone_label">Notifications on Phone</string>

    <string name="pref_enable_notifications_phone_true">Enabled</string>
    <string name="pref_enable_notifications_phone_false">Not Enabled</string>
    <string name="pref_enable_notifications_phone_default" translatable="false">true</string>

    <!-- Strings related to Wear Notification Enabled preference -->
    <string name="pref_enable_notifications_wear_key" translatable="false">enable_wear_notifications</string>
    <string name="pref_enable_notifications_wear_label">Notifications on Wear</string>

    <string name="pref_enable_notifications_wear_true">Enabled</string>
    <string name="pref_enable_notifications_wear_false">Not Enabled</string>
    <string name="pref_enable_notifications_wear_default" translatable="false">true</string>

    <!-- Strings related to Notification Light Enabled preference -->
    <string name="pref_enable_notifications_light_key" translatable="false">enable_notification_light</string>
    <string name="pref_enable_notifications_light_label">Enable Notification Light</string>

    <string name="pref_enable_notifications_light_true">Enabled</string>
    <string name="pref_enable_notifications_light_false">Not Enabled</string>
    <string name="pref_enable_notifications_light_default" translatable="false">true</string>

    <!-- Strings related to Notification Sound Enabled preference -->
    <string name="pref_enable_notifications_sound_key" translatable="false">enable_notification_sound</string>
    <string name="pref_enable_notifications_sound_label">Enable Notification Sound</string>

    <string name="pref_enable_notifications_sound_true">Enabled</string>
    <string name="pref_enable_notifications_sound_false">Not Enabled</string>
    <string name="pref_enable_notifications_sound_default" translatable="false">true</string>


    <!-- Strings related to Notification Vibration Enabled preference -->
    <string name="pref_enable_notifications_vibrate_key" translatable="false">enable_notification_vibration</string>
    <string name="pref_enable_notifications_vibrate_label">Enable Notification Vibration</string>

    <string name="pref_enable_notifications_vibrate_true">Enabled</string>
    <string name="pref_enable_notifications_vibrate_false">Not Enabled</string>
    <string name="pref_enable_notifications_vibrate_default" translatable="false">true</string>

    <!-- Strings related to Notification Priority preference -->
    <string name="pref_notifications_priority_key" translatable="false">notification_priority</string>
    <string name="pref_notifications_priority_label">Notification Priority</string>
    <string name="pref_notifications_priority_summary">Set priority of your weather notification</string>
    <string name="pref_notifications_priority_default" translatable="false">0</string>

    <!-- Strings related to Enabling Notification Time preference -->
    <string name="pref_enable_notifications_time_preference_key" translatable="false">time_preference_enable</string>
    <string name="pref_enable_notifications_time_preference_label" translatable="false">Enable Timely Notifications</string>

    <string name="pref_enable_notifications_time_preference_true">Enabled</string>
    <string name="pref_enable_notifications_time_preference_false">Not Enabled</string>
    <string name="pref_enable_notifications_time_preference_default" translatable="false">true</string>

    <!-- Strings related to Setting Time Preference -->
    <string name="pref_notifications_time_preference_key" translatable="false">time_preference</string>
    <string name="pref_notifications_time_preference_label" translatable="false">Time Preference</string>
    <string name="pref_notifications_time_preference_summary" translatable="false">Set the time at
        which you want to receive your weather notifications</string>
    <string name="pref_notifications_time_preference_default" translatable="false">00:00</string>

</resources>
